--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,36 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
+  build:
     docker:
-      # Specify the version you desire here
-      # See: https://circleci.com/developer/images/image/cimg/base
-      - image: cimg/base:current
-
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
+      - image: cimg/android:2023.01  # Image Docker pour Android
+    environment:
+      GRADLE_OPTS: '-Dorg.gradle.daemon=false -Dorg.gradle.jvmargs="-Xmx2g"'
     steps:
-      # Checkout the code as the first step.
-      - checkout
+      - checkout  # Récupère le code depuis le repo
+      - restore_cache:
+          keys:
+            - gradle-cache-{{ checksum "build.gradle" }}
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Installer les dépendances
+          command: ./gradlew dependencies
+      - run:
+          name: Build APK Debug
+          command: ./gradlew assembleDebug
+      - save_cache:
+          key: gradle-cache-{{ checksum "build.gradle" }}
+          paths:
+            - ~/.gradle
+      - store_artifacts:
+          path: app/build/outputs/apk/debug/app-debug.apk
+          destination: apk
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  say-hello-workflow: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  version: 2
+  build-and-test:
     jobs:
-      - say-hello
+      - build:
+          filters:
+            branches:
+              only:
+                - develop 
