--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: unityci/editor:2022.3.32f1  # Unity image (verifie ta version)
+      - image: unityci/editor:windows-2022.3.32f1-android-3.1.0
     steps:
       - checkout
       
