--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
           name: Configurer la licence Unity
           command: |
             mkdir -p /root/.local/share/unity3d/Unity/
-            echo "$UNITY_LICENSE" > /root/.local/share/unity3d/Unity/Unity_lic.ulf
+            echo -e "$UNITY_LICENSE" | base64 --decode > /root/.local/share/unity3d/Unity/Unity_lic.ulf
             chmod 777 /root/.local/share/unity3d/Unity/Unity_lic.ulf
 
       - run:
