--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
      #  Vérification que l'exécutable Unity est bien accessible
       - run:
           name: Vérification de l'exécutable Unity
-            command: |
+          command: |
               if [ ! -f "/opt/unity/Editor/Unity" ]; then
                 echo "L'exécutable Unity n'existe pas !"
                 exit 1
@@ -26,12 +26,12 @@ jobs:
        #  Donner les permissions d'exécution à Unity
       - run:
           name: Donner les permissions à Unity
-            command: chmod +x /opt/unity/Editor/Unity
+          command: chmod +x /opt/unity/Editor/Unity
 
       # Vérification du contenu du répertoire
-      #- run:
-       #   name: Vérification des fichiers du projet
-        #  command: ls -la $(pwd)
+      - run:
+          name: Vérification des fichiers du projet
+          command: ls -la $(pwd)
 
       # Vérification que le fichier BuildScript.cs est bien présent
       - run:
