--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
 
       - run:
           name: Vérification de la variable UNITY_LICENSE
-          command: echo "$UNITY_LICENSE"
+          command: echo $UNITY_LICENSE
 
       - run:
           name: Test de décodage de la licence
