--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,24 +17,12 @@ jobs:
       - run:
           name: Vérification de la variable UNITY_LICENSE
           command: |
-            if [ -z "$UNITY_LICENSE" ]; then
+            if [ -z $UNITY_LICENSE ]; then
               echo "❌ UNITY_LICENSE n'est pas défini !"
               exit 1
             else
               echo "✅ UNITY_LICENSE est défini."
-              echo $UNITY_LICENSE | head -c 50  # Affiche les 50 premiers caractères pour vérifier
-            fi
-
-      - run:
-          name: Vérification du format de UNITY_LICENSE
-          command: |
-            echo "Longueur de UNITY_LICENSE : $(echo -n "$UNITY_LICENSE" | wc -c)"
-            echo "$UNITY_LICENSE" | base64 --decode &> /dev/null
-            if [ $? -ne 0 ]; then
-              echo "❌ UNITY_LICENSE semble mal encodé en Base64 !"
-              exit 1
-            else
-              echo "✅ UNITY_LICENSE est bien encodé en Base64."
+              echo UNITY_LICENSE | head -c 50  # Affiche les 50 premiers caractères pour vérifier
             fi
 
       - run:
