--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,34 +3,14 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/base:2023.06 #unityci/editor:2022.3.32f1-android-3
+      - image: unityci/editor:2022.3.32f1-android-3
     steps:
       - checkout
 
        #  Donner les permissions d'exécution à Unity
-      #- run:
-       #   name: Donner les permissions à Unity
-        #  command: chmod +x /opt/unity/Editor/Unity
-
       - run:
-          name: Vérification de la variable UNITY_LICENSE
-          command: |
-            if [ -z $UNITY_LICENSE ]; then
-              echo "❌ UNITY_LICENSE n'est pas défini !"
-              exit 1
-            else
-              echo "✅ UNITY_LICENSE est défini."
-              echo $UNITY_LICENSE | head -c 50  # Affiche les 50 premiers caractères pour vérifier
-            fi
-
-      - run:
-          name: Vérification de la variable UNITY_LICENSE
-          command: echo $UNITY_LICENSE
-
-      - run:
-          name: Test de décodage de la licence
-          command: echo "$UNITY_LICENSE" | base64 --decode || echo "Erreur de décodage !"
-    
+          name: Donner les permissions à Unity
+          command: chmod +x /opt/unity/Editor/Unity
 
       # Configuration de la licence Unity
       - run:
