--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           name: Configurer la licence Unity
           command: |
             mkdir -p $HOME/.local/share/unity3d/Unity/
-            echo "$UNITY_LICENSE" | base64 --decode > $HOME/.local/share/unity3d/Unity/Unity_lic.ulf
+            echo $UNITY_LICENSE | base64 --decode > $HOME/.local/share/unity3d/Unity/Unity_lic.ulf
             cat $HOME/.local/share/unity3d/Unity/Unity_lic.ulf | head -c 50  # Vérifie si le fichier est bien écrit
             chmod 777 $HOME/.local/share/unity3d/Unity/Unity_lic.ulf
 
