--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,11 @@ jobs:
       - image: unityci/editor:2022.3.32f1-android-3
     steps:
       - checkout
+
+      - restore_cache:
+          keys:
+            - unity-docker-cache-v1-{{ checksum "Dockerfile" }}
+            - unity-docker-cache-v1
       
       # Donner les permissions d'exécution à Unity
       - run:
@@ -20,6 +25,9 @@ jobs:
             echo $UNITY_LICENSE | base64 --decode > $HOME/.local/share/unity3d/Unity/Unity_lic.ulf
             cat $HOME/.local/share/unity3d/Unity/Unity_lic.ulf | head -c 50  # Vérifie si le fichier est bien écrit
             chmod 777 $HOME/.local/share/unity3d/Unity/Unity_lic.ulf
+    - run:
+          name: Vérifier le fichier de licence
+          command: cat $HOME/.local/share/unity3d/Unity/Unity_lic.ulf || echo "❌ Licence introuvable !"
             
       - run:
           name: Activer la licence Unity
@@ -59,6 +67,12 @@ jobs:
       - store_artifacts:
           path: $(pwd)/Builds
           destination: build_output
+
+      # Sauvegarder l'image dans le cache
+      - save_cache:
+          paths:
+            - /opt/unity
+          key: unity-docker-cache-v1-{{ checksum "Dockerfile" }}
 
 workflows:
   version: 2
