--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - checkout  # Récupère le code depuis le repo
       
-      setup_remote_docker:
+      - setup_remote_docker:
           docker_layer_caching: true
 
       # Vérifier les fichiers après checkout
