--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,94 +1,10 @@
 version: 2.1
 
-jobs:
-  build:
-    docker:
-      - image: unityci/editor:2022.3.32f1-android-3
-    working_directory: ~/project
-    steps:
-      - checkout  # Récupère le code depuis le repo
-      
-      - setup_remote_docker:
-          docker_layer_caching: true
-
-      - restore_cache:
-          keys:
-            - unity-docker-cache-v1-{{ .Branch }}
-            - unity-docker-cache-v1
-
-      # Donner les permissions d'exécution à Unity
-      - run:
-          name: Donner les permissions à Unity
-          command: chmod +x /opt/unity/Editor/Unity
-
-      # Configuration de la licence Unity
-      - run:
-          name: Configurer la licence Unity
-          command: |
-            mkdir -p $HOME/.local/share/unity3d/Unity/
-            echo $UNITY_LICENSE | base64 --decode > $HOME/.local/share/unity3d/Unity/Unity_lic.ulf
-            cat $HOME/.local/share/unity3d/Unity/Unity_lic.ulf | head -c 50  # Vérifie si le fichier est bien écrit
-            chmod 777 $HOME/.local/share/unity3d/Unity/Unity_lic.ulf
-
-      - run:
-          name : Username & Password
-          command: |
-            echo $UNITY_USERNAME
-            echo $UNITY_PASSWORD
-
-      - run:
-          name: Activer Unity
-          command: |
-            /opt/unity/Editor/Unity -batchmode -nographics -quit -username $UNITY_USERNAME -password $UNITY_PASSWORD -logFile /tmp/unity_build.log || echo "Echcec de l'activation"
-
-      - run:
-          name: Afficher les logs de Unity
-          command: cat /tmp/unity_build.log
-
-      - run:
-          name: Vérifier les permissions du fichier de licence
-          command: ls -la $HOME/.local/share/unity3d/Unity/
-
-      # Lancer la build Unity
-      - run:
-          name: Lancer la build Unity
-          command: |
-            /opt/unity/Editor/Unity -batchmode -nographics -quit \
-            -projectPath $(pwd) -executeMethod BuildScript.PerformBuild \
-            -logFile logs/build.log || echo "Échec de la build Unity."
-
-      # Vérification des logs Unity
-      - run:
-          name: Affichage des logs Unity
-          command: cat logs/build.log || echo "Le fichier de log est introuvable."
-
-      # Vérifier si la build a été créée
-      - run:
-          name: Vérifier si la build a été créée
-          command: |
-            if [ -d "$(pwd)/Builds" ]; then
-              echo "La build a été créée avec succès."
-            else
-              echo "Le dossier Builds est vide ou n'existe pas."
-              exit 1
-            fi
-
-      # Stockage des artifacts
-      - store_artifacts:
-          path: $(pwd)/Builds
-          destination: build_output
-
-      # Sauvegarder l'image dans le cache
-      - save_cache:
-          paths:
-            - /opt/unity
-          key: unity-docker-cache-v1-{{ .Branch }}
+orbs:
+  unity: game-ci/unity@x.y
 
 workflows:
-  version: 2
-  build-workflow:
+  create-unity-activation-file:
     jobs:
-      - build:
-          filters:
-            branches:
-              only: develop
+      - unity/create-activation-file:
+          editor_version: 2022.1.11f1
