--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,10 @@
 version: 2.1
 
 orbs:
-  unity: game-ci/unity@x.y
+  unity: game-ci/unity@2022.3
 
 workflows:
   create-unity-activation-file:
     jobs:
       - unity/create-activation-file:
-          editor_version: 2022.1.11f1
+          editor_version: 2022.3.32f1
