--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  unity: game-ci/unity@2022.3.32f1
+  unity: game-ci/unity@editor-ubuntu-2022.3.32f1-android-3.1.0
 
 workflows:
   create-unity-activation-file:
