--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,20 @@ orbs:
   unity: game-ci/unity@1.7.1
 
 workflows:
-  create-unity-activation-file:
+  build-unity-project:
     jobs:
-      - unity/create-activation-file:
-          editor_version: 2022.3.3f1
+      - unity/build:
+          name: 'build-android'
+          step-name: 'Build Android'
+          unity-license-var-name: 'UNITY_ENCODED_LICENSE'
+          unity-username-var-name: 'UNITY_USERNAME'
+          unity-password-var-name: 'UNITY_PASSWORD'
+          executor:
+            name: 'unity/ubuntu'
+            target_platform: 'android'
+            editor_version: '2022.3.3f1'
+            resource_class: 'large'
+          project-path: .
+          build-target: 'Android'
+          context: unity
 
