--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,34 @@ version: 2.1
 orbs:
   unity: game-ci/unity@1.7.1
 
-workflows:
-  build-unity-project:
-    jobs:
+jobs:
+  unity-build:
+    docker:
+      - image: unityci/editor:ubuntu-2022.3.3f1-base-1
+    steps:
+      - checkout
+      - run:
+          name: "Vérifier la variable d'environnement de licence"
+          command: |
+            echo "Vérification de UNITY_ENCODED_LICENSE..."
+            if [ -z "$UNITY_ENCODED_LICENSE" ]; then
+              echo "La variable UNITY_ENCODED_LICENSE n'est pas définie ou vide"
+              exit 1
+            else
+              echo "La variable UNITY_ENCODED_LICENSE est définie"
+            fi
+      - unity/activation:
+          license: $UNITY_ENCODED_LICENSE
+          username: $UNITY_USERNAME
+          password: $UNITY_PASSWORD
       - unity/build:
           name: 'build-android'
-          step-name: 'Build Android'
-          unity-license-var-name: 'UNITY_ENCODED_LICENSE'
-          executor:
-            name: 'unity/ubuntu'
-            target_platform: 'android'
-            editor_version: '2022.3.3f1'
-            resource_class: 'large'
-          project-path: .
+          project-path: 'Unity2D-Demo-Game-CI-CD/src'
           build-target: 'Android'
-          context: unity
+          editor-version: '2022.3.3f1'
+
+workflows:
+  version: 2
+  build:
+    jobs:
+      - unity-build
