--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,9 @@ version: 2.1
 orbs:
   unity: game-ci/unity@1.7.1
 
-jobs:
-  unity-build:
-    docker:
-      - image: unityci/editor:ubuntu-2022.3.3f1-base-1
-    steps:
-      - checkout
+workflows:
+  build-unity-project:
+    jobs:
       - run:
           name: "Vérifier la variable d'environnement de licence"
           command: |
@@ -19,18 +16,18 @@ jobs:
             else
               echo "La variable UNITY_ENCODED_LICENSE est définie"
             fi
-      - unity/activation:
-          license: $UNITY_ENCODED_LICENSE
-          username: $UNITY_USERNAME
-          password: $UNITY_PASSWORD
+    
       - unity/build:
           name: 'build-android'
-          project-path: 'Unity2D-Demo-Game-CI-CD/src'
+          step-name: 'Build Android'
+          unity-license-var-name: 'UNITY_ENCODED_LICENSE'
+          unity-username-var-name: 'UNITY_USERNAME'
+          unity-password-var-name: 'UNITY_PASSWORD'
+          executor:
+            name: 'unity/ubuntu'
+            target_platform: 'android'
+            editor_version: '2022.3.3f1'
+            resource_class: 'large'
+          project-path: .
           build-target: 'Android'
-          editor-version: '2022.3.3f1'
-
-workflows:
-  version: 2
-  build:
-    jobs:
-      - unity-build
+          context: unity
