--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,33 @@
 version: 2.1
 
-jobs:
-  test-env-vars:
-    docker:
-      - image: cimg/base:stable  # Une image légère pour exécuter le test
-    steps:
-      - run:
-          name: Vérification de la variable UNITY_ENCODED_LICENSE
-          command: |
-            if [ -z "$UNITY_ENCODED_LICENSE" ]; then
-              echo "❌ La variable UNITY_ENCODED_LICENSE n'est pas définie ou est vide."
-              exit 1
-            else
-              echo "✅ La variable UNITY_ENCODED_LICENSE est bien définie."
-            fi
+orbs:
+  unity: game-ci/unity@1.7.1
 
 workflows:
   build-unity-project:
     jobs:
-      - test-env-vars
+      - unity/build:
+          name: 'build-android'
+          step-name: 'Build Android'
+          unity-license-var-name: 'UNITY_ENCODED_LICENSE'
+          unity-username-var-name: 'UNITY_USERNAME'
+          unity-password-var-name: 'UNITY_PASSWORD'
+          executor:
+            name: 'unity/ubuntu'
+            target_platform: 'android'
+            editor_version: '2022.3.3f1'
+            resource_class: 'large'
+          project-path: 'Unity2D-Demo-Game-CI-CD/src'
+          build-target: 'Android'
+          context: DreamVillageUnityInfo
+          pre-steps:
+            - run:
+                name: "Vérifier la variable d'environnement de licence"
+                command: |
+                  echo "Vérification de UNITY_ENCODED_LICENSE..."
+                  if [ -z "$UNITY_ENCODED_LICENSE" ]; then
+                    echo "La variable UNITY_ENCODED_LICENSE n'est pas définie ou vide"
+                    exit 1
+                  else
+                    echo "La variable UNITY_ENCODED_LICENSE est définie"
+                  fi
