--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ workflows:
             target_platform: 'android'
             editor_version: '2022.3.3f1'
             resource_class: 'large'
-          project-path: 'Unity2D-Demo-Game-CI-CD/src'
+          project-path: .
           build-target: 'Android'
           context: DreamVillageUnityInfo
           pre-steps:
