--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,4 +46,4 @@ workflows:
           context: DreamVillageUnityInfo
           filters:
             branches:
-              only: main
+              only: develop
