--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ workflows:
                 command: |
                     export ANDROID_HOME=/opt/android-sdk
                     export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$ANDROID_HOME/platform-tools:$PATH
+                    find / -name "sdkmanager" 2>/dev/null
                     sdkmanager --list
                                   
           
